# Takoyaki

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjects.bat  README.md
resources/: Takoyaki.rc  resource.h
src/: main.cpp  outputmanager.cpp  outputmanager.h  outputwindow.cpp  outputwindow.h  overlaymanager.cpp  overlaymanager.h
src/shaders/: ps.hlsl  vs.hlsl
